--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     </div>
                     <div class="hybrid"></div>
                     <div class="hebergementBar">
-                            <a href="#linkToArticle1">Hebergment</a>
-                            <a href="#article3">Activités</a>
+                            <a class="navBar1" href="#container3">Hebergment</a>
+                            <a class="navBar2" href="#article3">Activités</a>
                     </div>
                 </div>
             </header>
@@ -81,7 +81,6 @@
                 </section>
                 <div id="container3">
                     <section class="article1">
-                        <a id="linkToArticle1" href="#"></a>
                         <h2>Hébergement à Marseille</h2>
                         <div class="artcile1Part1">
                             <!--Cards start-->
@@ -93,13 +92,11 @@
                                     <h4>Auberge la Cannebière</h4>
                                     <p>Nuit à partir de 25$</p>
                                     <div class="starEvaluation">
-                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                        <div class="startEmptyIcon">
-                                            <i class="fa-solid fa-star"></i>
-                                        </div>
+                                        <i class="fa-solid fa-star starFullIcon"></i>
+                                        <i class="fa-solid fa-star starFullIcon"></i>
+                                        <i class="fa-solid fa-star starFullIcon"></i>
+                                        <i class="fa-solid fa-star starFullIcon"></i>
+                                        <i class="fa-solid fa-star starFullIconGrey"></i>
                                     </div>
                                 </div>
                             </div>
@@ -111,11 +108,11 @@
                                     <h4>Hôtel du port</h4>
                                     <p>Nuit à partir de 2$</p>
                                     <div class="starEvaluation">
-                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                        <i class="fa-solid fa-star starFullIcon"></i>
+                                        <i class="fa-solid fa-star starFullIcon"></i>
+                                        <i class="fa-solid fa-star starFullIcon"></i>
+                                        <i class="fa-solid fa-star starFullIcon"></i>
+                                        <i class="fa-solid fa-star starFullIcon"></i>
                                     </div>
                                 </div>
                             </div>
@@ -127,13 +124,11 @@
                                     <h4>Hôtel Les mouettes</h4>
                                     <p>Nuit à partir de 76$</p>
                                     <div class="starEvaluation">
-                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                        <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                        <div class="startEmptyIcon">
-                                            <i class="fa-solid fa-star"></i>
-                                        </div>
+                                        <i class="fa-solid fa-star starFullIcon"></i>
+                                        <i class="fa-solid fa-star starFullIcon"></i>
+                                        <i class="fa-solid fa-star starFullIcon"></i>
+                                        <i class="fa-solid fa-star starFullIcon"></i>
+                                        <i class="fa-solid fa-star starFullIconGrey"></i>
                                     </div>
                                 </div>
                             </div>
@@ -147,13 +142,11 @@
                                         <h4>Hôtel de la mer</h4>
                                         <p>Nuit à partir de 25$</p>
                                         <div class="starEvaluation">
-                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                            <div class="startEmptyIcon">
-                                                <i class="fa-solid fa-star"></i>
-                                                <i class="fa-solid fa-star"></i>
-                                            </div>
+                                            <i class="fa-solid fa-star starFullIcon"></i>
+                                            <i class="fa-solid fa-star starFullIcon"></i>
+                                            <i class="fa-solid fa-star starFullIcon"></i>
+                                            <i class="fa-solid fa-star starFullIconGrey"></i>
+                                            <i class="fa-solid fa-star starFullIconGrey"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -165,13 +158,11 @@
                                         <h4>Auberge Le Panier</h4>
                                         <p>Nuit à partir de 2$</p>
                                         <div class="starEvaluation">
-                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                            <div class="startEmptyIcon">
-                                                <i class="fa-solid fa-star"></i>
-                                            </div>
+                                            <i class="fa-solid fa-star starFullIcon"></i>
+                                            <i class="fa-solid fa-star starFullIcon"></i>
+                                            <i class="fa-solid fa-star starFullIcon"></i>
+                                            <i class="fa-solid fa-star starFullIcon"></i>
+                                            <i class="fa-solid fa-star starFullIconGrey"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -183,16 +174,16 @@
                                         <h4>Hôtel chez Amina</h4>
                                         <p>Nuit à partir de 76$</p>
                                         <div class="starEvaluation">
-                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                            <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                            <i class="fa-solid fa-star starFullIcon"></i>
+                                            <i class="fa-solid fa-star starFullIcon"></i>
+                                            <i class="fa-solid fa-star starFullIcon"></i>
+                                            <i class="fa-solid fa-star starFullIcon"></i>
+                                            <i class="fa-solid fa-star starFullIcon"></i>
                                         </div>
                                     </div>
                                 </div>
                         </div> 
-                        <p>Arfficher plus</p>
+                        <h5>Arfficher plus</h5>
                     </section>
                     <aside class="article2">
                         <div class="artcile2Title">
@@ -200,48 +191,50 @@
                             <i class="fa-solid fa-star"></i>
                         </div>
                         <div class="cardsWithIcon">
-                            <div class="article2Img">
+                                <div class="article2Img">
                                     <img src="./images/hebergements/4_small/HôtelLesoleildumatin.jpg" alt="Image Hôtel Tout bleu et Blanc">
-                                    </div>
+                                </div>
                                 <div class="cardDescripIcon">
                                 <h3>Hôtel Le soleil du matin</h3>
                                 <p>Nuit à partir de 128$</p>
-                                <div class="starEvaluation">
+                                <div class="starEvaluation2">
                                     <i class="fa-solid fa-star starFullIcon"></i>
-                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                    <i class="fa-solid fa-star starFullIcon"></i>
+                                    <i class="fa-solid fa-star starFullIcon"></i>
+                                    <i class="fa-solid fa-star starFullIcon"></i>
+                                    <i class="fa-solid fa-star starFullIcon"></i>
                                 </div>
                             </div>
                         </div>
                         <div class="cardsWithIcon">
-                            <img src="./images/hebergements/4_small/Aucoeurdel'eauChambred'hôte.jpg" alt="Image Au coeur de l'eau Chambre d'hôtel">
+                            <div class="article2Img">
+                                <img src="./images/hebergements/4_small/Aucoeurdel'eauChambred'hôte.jpg" alt="Image Au coeur de l'eau Chambre d'hôtel">
+                             </div>
                             <div class="cardDescripIcon">
                                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                                 <p>Nuit à partir de 71$</p>
-                                <div class="starEvaluation">
-                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
+                                <div class="starEvaluation2">
+                                    <i class="fa-solid fa-star starFullIcon"></i>
+                                    <i class="fa-solid fa-star starFullIcon"></i>
+                                    <i class="fa-solid fa-star starFullIcon"></i>
+                                    <i class="fa-solid fa-star starFullIcon"></i>
                                     <i class="fa-solid fa-star starFullIconGrey"></i>
                                 </div>
                             </div>
                         </div>
                         <div class="cardsWithIcon">
-                            <img src="./images/hebergements/4_small/HôtelToutbleuetBlanc.jpg" alt="Image Hôtel Tout bleu et Blanc">
+                            <div class="article2Img">
+                                <img src="./images/hebergements/4_small/HôtelToutbleuetBlanc.jpg" alt="Image Hôtel Tout bleu et Blanc">
+                            </div>
                             <div class="cardDescripIcon">
                                 <h3>Hôtel Tout bleu et Blanc</h3>
                                 <p>Nuit à partir de 68$</p>
-                                <div class="starEvaluation">
-                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                    <div class="starFullIcon"><i class="fa-solid fa-star"></i></div>
-                                    <div class="startEmptyIcon">
-                                        <i class="fa-solid fa-star"></i>
-                                    </div>
+                                <div class="starEvaluation2">
+                                    <i class="fa-solid fa-star starFullIcon"></i>
+                                    <i class="fa-solid fa-star starFullIcon"></i>
+                                    <i class="fa-solid fa-star starFullIcon"></i>
+                                    <i class="fa-solid fa-star starFullIcon"></i>
+                                    <i class="fa-solid fa-star starFullIconGrey"></i>
                                 </div>
                             </div>
                         </div>
@@ -251,26 +244,36 @@
                         <div class="article3cards">
                             <div class="artcile3Part1">
                                 <div class="cards3Solo">
-                                    <img src="./images/activites/4_small/vieuxPort.jpg" alt="Image vieux port">
-                                    <p>vieux Port</p>
+                                    <div class="cards3SoloImg">
+                                        <img src="./images/activites/4_small/vieuxPort.jpg" alt="Image vieux port">
+                                    </div>
+                                    <div class="cards3SoloText">
+                                        <p>vieux Port</p>
+                                    </div>
                                 </div>
                                 <div class="artcile3Relou">
                                     <div class="cards3">
-                                        <div class="cardImgB5">
+                                        <div class="imgDuo1">
                                             <img src="./images/activites/4_small/PortdePomègues.jpg" alt="Image Port de Pomègues">
                                         </div>
                                         <div class="cardTextB5"><p>Port de Pomègues</p></div>
                                     </div>
                                     <div class="cards3">
-                                        <img src="./images/activites/4_small/IlesduFrioul.jpg" alt="Image Iles du Frioul">
+                                        <div class="imgDuo2">
+                                            <img src="./images/activites/4_small/IlesduFrioul.jpg" alt="Image Iles du Frioul">
+                                        </div>
                                         <p>Iles du Frioul</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="artcile3Part2">
                                 <div class="cards3Solo">
-                                    <img src="./images/activites/4_small/ParcNationaldesCalanques.jpg" alt="Image Parc National des Calanques">
-                                    <p>Parc National des Calanques</p>
+                                    <div class="cards3SoloImg">
+                                        <img src="./images/activites/4_small/ParcNationaldesCalanques.jpg" alt="Image Parc National des Calanques">
+                                    </div>
+                                    <div class="cards3SoloText">
+                                        <p>Parc National des Calanques</p>
+                                    </div>
                                 </div>
                                 <div class="artcile3Relou">
                                     <div class="cards3">
