Correction: aside display

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <div class="cardDescripIcon">
                                 <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                                 <p>Nuit à partir de 71$</p>
-                                <div class="starEvaluation2">
+                                <div class="starEvaluation2Relou">
                                     <i class="fa-solid fa-star starFullIcon"></i>
                                     <i class="fa-solid fa-star starFullIcon"></i>
                                     <i class="fa-solid fa-star starFullIcon"></i>
