Correction: footer display

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                         <img src="./images/activites/4_small/vieuxPort.jpg" alt="Image vieux port">
                                     </div>
                                     <div class="cards3SoloText">
-                                        <p>vieux Port</p>
+                                        <p>Vieux Port</p>
                                     </div>
                                 </div>
                                 <div class="artcile3Relou">
