Correction: article 3 and footer display

--- a/index.html
+++ b/index.html
@@ -252,17 +252,21 @@
                                     </div>
                                 </div>
                                 <div class="artcile3Relou">
-                                    <div class="cards3">
+                                    <div class="cards3Top">
                                         <div class="imgDuo1">
                                             <img src="./images/activites/4_small/PortdePomègues.jpg" alt="Image Port de Pomègues">
                                         </div>
-                                        <div class="cardTextB5"><p>Port de Pomègues</p></div>
+                                        <div class="cards3DuoText">
+                                            <p>Port de Pomègues</p>
+                                        </div>
                                     </div>
-                                    <div class="cards3">
+                                    <div class="cards3Bot">
                                         <div class="imgDuo2">
                                             <img src="./images/activites/4_small/IlesduFrioul.jpg" alt="Image Iles du Frioul">
                                         </div>
-                                        <p>Iles du Frioul</p>
+                                        <div class="cards3DuoText">
+                                            <p>Iles du Frioul</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -276,13 +280,21 @@
                                     </div>
                                 </div>
                                 <div class="artcile3Relou">
-                                    <div class="cards3">
-                                        <img src="./images/activites/4_small/NotreDamedelagarde.jpg" alt="Image Notre Dame de la garde">
-                                        <p>Notre Dame de la garde</p>
+                                    <div class="cards3TopPart2">
+                                        <div class="imgDuo3">
+                                            <img src="./images/activites/4_small/NotreDamedelagarde.jpg" alt="Image Notre Dame de la garde">
+                                        </div>
+                                        <div class="cards3DuoText">
+                                            <p>Notre Dame de la garde</p>
+                                        </div>
                                     </div>
-                                    <div class="cards3">
-                                        <img src="./images/activites/4_small/ParcLongchap.jpg" alt="Image Parc Longchap">
-                                        <p>Parc Longchap</p>
+                                    <div class="cards3BotPart2">
+                                        <div class="imgDuo4">
+                                            <img src="./images/activites/4_small/ParcLongchap.jpg" alt="Image Parc Longchap">
+                                        </div>
+                                        <div class="cards3DuoText">
+                                            <p>Parc Longchap</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
