Correction: menu display in mobile in phone version

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             </header>
             <main id="container2">
                 <section id="filtersContainer">
-                    <h1>Trouver votre hébergement pour des vacances de rêve</h1><p>En plain centre ville ou en pleine nature</p> 
+                    <h1>Trouver votre hébergement pour des vacances de rêve</h1>
+                    <h2>En plain centre ville ou en pleine nature</h2> 
                     <div class="rechercheBar">
                         <div class="buttonLocalisationIcon">
                             <i class="fa-solid fa-location-dot"></i>
@@ -46,7 +47,7 @@
                         </div>
                     </div>
                     <div class="filters">
-                        <h2>Filtres</h2>
+                        <h3>Filtres</h3>
                         <div class="filterRelou">
                              <a href="#">
                                 <div class="filter">
