Correction article3 display in mobile

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                                         <div class="imgDuo1">
                                             <img src="./images/activites/4_small/PortdePomègues.jpg" alt="Image Port de Pomègues">
                                         </div>
-                                        <div class="cards3DuoText">
+                                        <div class="cards3DuoTextCorrect">
                                             <p>Port de Pomègues</p>
                                         </div>
                                     </div>
@@ -265,7 +265,7 @@
                                         <div class="imgDuo2">
                                             <img src="./images/activites/4_small/IlesduFrioul.jpg" alt="Image Iles du Frioul">
                                         </div>
-                                        <div class="cards3DuoText">
+                                        <div class="cards3DuoTextCorrect2">
                                             <p>Iles du Frioul</p>
                                         </div>
                                     </div>
